# evaluation-stage-mai-2023

./: .eslintrc.cjs  .gitignore  Cargo.toml  Timesheet-evaluation.xlsx  graphql.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
rust-backend/: Cargo.toml
rust-backend/migrations/: j1_test_data.sql  j1_up.sql  j2_test_data.sql  j2_up.sql
rust-backend/migrations/2024-05-13-044759_reset/: down.sql
rust-backend/migrations/2024-05-13-105506_create_user/: up.sql
rust-backend/migrations/2024-05-13-111732_create_clients/: up.sql
rust-backend/migrations/2024-05-13-111910_create_unite/: down.sql  up.sql
rust-backend/migrations/2024-05-13-112059_create_finition/: down.sql  up.sql
rust-backend/migrations/2024-05-13-112915_create_materiels/: down.sql  up.sql
rust-backend/migrations/2024-05-13-113624_create_type_chantier/: down.sql  up.sql
rust-backend/migrations/2024-05-13-114617_create_devis/: down.sql  up.sql
rust-backend/migrations/2024-05-13-120456_create_chantier/: down.sql  up.sql
rust-backend/migrations/2024-05-13-133436_v_materiel_unite/: down.sql  up.sql
rust-backend/migrations/2024-05-13-140204_v_devis_materiel/: down.sql  up.sql
rust-backend/migrations/2024-05-14-065852_v_chantier_finition/: down.sql  up.sql
rust-backend/src/: error.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.rs  views.rs
rust-backend/src/graphql/: admin.rs  frontoffice.rs  objects.rs
rust-backend/src/graphql/admin/: mutation.rs  (+2 more)
rust-backend/src/models/: chantier.rs  client.rs  devis.rs  finition.rs  materiel.rs  type_chantier.rs  unite.rs  v_chantier_finition.rs  v_devis_materiel.rs
(+70 files in other folders)
